--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <!---navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">companyName and logo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,7 +24,7 @@
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="feature.html">Features</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Pricing</a>
@@ -44,13 +44,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/background.png" alt="First slide">
+                    <img class="d-block w-100" src="img/backgroundone.jpg" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/background2.png" alt="Second slide">
+                    <img class="d-block w-100" src="img/expertone.jpeg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/background3.png" alt="Third slide">
+                    <img class="d-block w-100" src="img/three.jpeg" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -67,13 +67,128 @@
         <div class="row jumbotron">
             <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
                 <p class="lead">
-                        Transfer of commodities or people from one place to another place is known as transport the things through which transfer takes place are known as vehicles or motors.
-                         Bullock-carts, rickshaws, cars, buses, trucks, trains, boats, ships, aero planes and helicopters etc. are examples of different vehicles. 
-                        All these vehicles need to ply on different ways or routes. Cars, buses, bullock carts and rickshaws ply on the roads.
+                  <h1 style="justify-content: center;">
+                      SERVICES
+                  </h1>
+                    Balancing the Freight Equation through a comprehensive suite of transportation and logistics services along with equipment offerings to compliment your shipping needs.
+                     Breadth + Depth = Capacity Solutions
                 </p>
             </div>
         </div>
         </div>
+     
+    <!--Card content-->
+    <div class="card-deck">
+        <div class="card">
+          <img src="img/becomeDriver.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="#" class="btn btn-outline-secondary">Learn more</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/dryimage.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-outline-secondary">Learn more</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/leasing.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <a href="#" class="btn btn-outline-secondary">Learn more</a>
+          </div>
+        </div>
+      </div>
+        <!--foorter-->
+        <!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+  <div>
+
+  </div>
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+  
+      <!-- Grid row -->
+      <div class="row">
+  
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+  
+          <!-- Content -->
+          <h5 class="text-uppercase">Connect</h5>
+          <p>Here you can use rows and columns to organize your footer content.</p>
+        </div>
+        <!-- Grid column -->
+        <hr class="clearfix w-100 d-md-none pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase">Links</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="fab fa-facebook">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase">Links</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+      <a href="#"> tranport.com</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 
     </body>
 </html>
